# waydroid-helper

./: .gitignore  README.md  README_ru.md  README_zh.md  meson.build  waydroid-helper.spec
.github/workflows/: release.yml
appimage/: .env.sample
appimage/hooks/: hook-gi.py
data/: com.jaoushingan.WaydroidHelper.gschema.xml  devices.json  meson.build
data/ui/: PropsPage.ui
debian/: changelog  control
just/: waydroid-helper.just
po/: POTFILES  de.po  ru.po  waydroid-helper.pot  zh_CN.po  zh_TW.po
tests/: conftest.py
tests/config/: test_root_config_gsettings.py
tests/controller/: test_control_msg_protocol.py  test_controller_architecture_boundaries.py  test_edit_controls.py  test_edit_interaction.py  test_editable_session.py  test_event_bus.py  test_input_event_factory.py  test_input_state_server.py  test_key_mapping.py  test_key_system.py  test_mode_layout.py  test_resize_geometry.py  test_runtime_context_injection.py  test_screen_geometry.py  test_widget_capabilities.py  test_widget_config.py  test_widget_decorator_contracts.py  test_widget_layout_key_codec.py  test_widget_layout_service.py  test_widget_mapping_registrar.py  test_widget_transparency_controller.py  test_window_input_router.py  test_workspace_manager.py
waydroid_helper/: available_version_page.py  general_page.py  gpu_combo_row.py  gsf_retriever.py  instance_detail_page.py  key_mapping_preference_dialog.py  main.py  meson.build  model_controller.py  models.py  props_page.py  scripts_page.py  sdk.py  shared_folder.py  waydroid-cli.in  waydroid-helper.in  waydroid.py  window.py
(+90 files in other folders)
